--- a/style.css
+++ b/style.css
@@ -5,19 +5,11 @@
     transition: 1s;
 }
 
-.ex-1-square:hover{
-    background-color: red;
-}
-
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
     transition: width 2s;
-}
-
-.ex-2-square:active {
-    width: 100%;
 }
 
 .ex-3-square {
@@ -27,10 +19,6 @@
     transition: 1s;
 }
 
-.ex-3-square:hover {
-    border-radius: 50%;
-}
-
 .ex-4-square {
     width: 100px;
     height: 100px;
@@ -38,9 +26,6 @@
     transition: 1s;
 }
 
-.ex-4-square:hover {
-    opacity: 0;
-}
 .ex-5-square {
     margin: 20px;
     width: 60px;
@@ -49,17 +34,6 @@
     transition: 1s;
 }
 
-.ex-5-square:hover {
-    margin: 0;
-    width: 100px;
-    height: 100px;
-}
-
-.ex-5-square:active {
-    margin: 35px;
-    width: 30px;
-    height: 30px;
-}
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
@@ -103,3 +77,40 @@
     width: 60px;
     height: 20px;
 }
+
+/* soluzioni */
+
+.ex-1-square:hover{
+    background-color: red;
+}
+
+.ex-2-square:active {
+    width: 100%;
+}
+
+.ex-3-square:hover {
+    border-radius: 50%;
+}
+
+.ex-4-square:hover {
+    opacity: 0;
+}
+
+.ex-5-square:hover {
+    margin: 0;
+    width: 100px;
+    height: 100px;
+}
+
+.ex-5-square:active {
+    margin: 35px;
+    width: 30px;
+    height: 30px;
+}
+
+.ex-6-img:hover {
+    filter: grayscale(100%);
+}
+
+
+
