--- a/style.css
+++ b/style.css
@@ -120,6 +120,15 @@
     filter: sepia(60%);
 }
 
+.ex-8-img {
+    transition: 2s;
+}
+
+.ex-8-img:hover {
+    border-radius: 20px;
+    filter: grayscale(60%) sepia(30%);
+}
+
 
 
 
