--- a/style.css
+++ b/style.css
@@ -140,6 +140,13 @@
     filter: grayscale(60%) sepia(60%);
 }
 
+.ex-10-icon {
+    animation: load 1s linear infinite;
+}
+
+@keyframes load {
+    100% {transform: rotate(-360deg);}
+}
 
 
 
