--- a/style.css
+++ b/style.css
@@ -141,11 +141,19 @@
 }
 
 .ex-10-icon {
-    animation: load 1s linear infinite;
+    animation: load1 1s linear infinite;
 }
 
-@keyframes load {
+@keyframes load1 {
     100% {transform: rotate(-360deg);}
+}
+
+.ex-11-icon:hover {
+    animation: load2 2s ease-in;
+}
+
+@keyframes load2 {
+    90% {transform: rotate(270deg);}
 }
 
 
