--- a/style.css
+++ b/style.css
@@ -156,5 +156,21 @@
     90% {transform: rotate(270deg);}
 }
 
+.ex-12-button:hover .ex-12-top-white {
+    animation: test-top1 2s linear;
+}
+
+@keyframes test-top1 {
+    50% {left: 70%;}
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: test-top2 2s linear;
+}
+
+@keyframes test-top2 {
+    50% {right: 65%;}
+}
+
 
 
