--- a/style.css
+++ b/style.css
@@ -165,12 +165,39 @@
 }
 
 .ex-12-button:hover .ex-12-bottom-white {
+    animation: test-bottom1 2s linear;
+}
+
+@keyframes test-bottom1 {
+    50% {right: 65%;}
+}
+
+.ex-13-button:hover .ex-13-top-white {
     animation: test-top2 2s linear;
 }
 
 @keyframes test-top2 {
-    50% {right: 65%;}
+    25% {left: 80%; top: -10%;}
+    45% {left: 80%; top: 100%;}
+    70% {left: -10%; top: 100%;}
+    90% {left: -10%; top: -10%;}
+    100% {left: 10%; top: -10%;}
 }
+
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: test-bottom2 2s linear;
+}
+
+@keyframes test-bottom2 {
+    25% {right: 80%; bottom: -10%;}
+    45% {right: 80%; bottom: 100%;}
+    70% {right: -10%; bottom: 100%;}
+    90% {right: -10%; bottom: -10%;}
+    100% {right: 20%; bottom: -10%;}
+}
+
+
+
 
 
 
